--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     <input type="text" name="user" [(ngModel)]="userName">
   </form>
 
-  <div *ngIf="selectedTask">
+  <!-- <div *ngIf="selectedTask">
     <h3>{{selectedTask.description}}</h3>
     <p>Task Complete? {{selectedTask.done}}</p>
     <h3>Edit Task</h3>
@@ -21,7 +21,10 @@
     <input type="radio" [(ngModel)]="selectedTask.priority" value="2">Medium Priority<br>
     <input type="radio" [(ngModel)]="selectedTask.priority" value="3">High Priority<br>
     <button (click)="finishedEditing()">Done</button>
-  </div>
+  </div> -->
 
 
+
+
+<app-edit-task [childSelectedTask]="selectedTask" (clickedDone)="finishedEditing()"></app-edit-task>
 </div>
