@ouput emmiter to match clickedDone in app.component.html

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,12 @@
     <input type="text" name="user" [(ngModel)]="userName">
   </form>
 
-<app-edit-task [childSelectedTask]="selectedTask" (doneButtonClickedSender)="finishedEditing()"></app-edit-task>
+
+
+<app-edit-task [childSelectedTask]="selectedTask" (clickedDone)="finishedEditing()"></app-edit-task>
+
+
+
 
 <app-new-task (sendTask)="addTask($event)"></app-new-task>
 </div>
